newHire & replacement price with attachemnt

--- a/src/app/component/newhireform/newhireform.component.html
+++ b/src/app/component/newhireform/newhireform.component.html
@@ -44,16 +44,38 @@
                 placeholder="Utilized Budget" />
             </div>
           </div>
-          <!-- Add more file fields -->
-          <div class="form-group col-md-6" *ngFor="let fileControl of myForm.get('attachments')?.value; let i = index">
-            <label for="attachment{{ i }}">Attachment {{ i + 1 }}</label>
-            <input type="file" class="form-control" [formControlName]="'attachment' + i" [id]="'attachment' + i" (change)="onAttachmentUpload($event, i)" #fileInput accept="image/*,.pdf" />
-            <p>Selected file: {{ selectedFileNames[i] }}</p>
+          <!-- Add Attachments -->
+          <div class="form-group col-md-12 attachments">
+            <label for="additionalAttachments">Attachments</label>
+            <div formArrayName="additionalAttachments">
+              <div *ngFor="let attachment of additionalAttachments.controls; let i = index" [formGroupName]="i">
+                <div class="row align-items-center">
+                  <div class="col-md-6">
+                    <input type="file" class="form-control" formControlName="attachment"
+                      (change)="handleFileChange($event, i)"
+                      [ngClass]="{'invalid-file': formSubmitted && attachment.invalid && !attachment.value}" />
+                  </div>
+                  <div class="col-md-3 delete">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon1"
+                      (click)="removeAttachmentField(i)">
+                      <ion-icon name="trash-outline"></ion-icon>
+                    </button>
+                  </div>
+                  <!-- <div class="col-md-3 filename">
+                    <button>
+                      <ion-icon name="document-outline"></ion-icon>
+                      {{attachment.value?.name}}
+                    </button>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+            <div class="input-group">
+              <ion-button (click)="addAttachmentField()" color="medium" fill="solid" size="small"><ion-icon
+                  name="cloud-upload-outline"></ion-icon></ion-button>
+            </div>
           </div>
-          <div class="form-group col-md-12">
-            <ion-button (click)="addMoreAttachments()" color="medium" fill="solid" size="small"><ion-icon name="cloud-upload-outline"></ion-icon></ion-button>
-          </div>
-          <!-- End of Additional Attachments -->
+          <!-- End Attachments -->
           <div class="inline-table">
             <table class="table table-bordered">
               <thead class="thead-dark">
@@ -62,6 +84,7 @@
                   <th>Item</th>
                   <th>Cost Center</th>
                   <th>Quantity</th>
+                  <th>Unit Price</th>
                   <th>Action</th>
                 </tr>
               </thead>
@@ -76,7 +99,7 @@
                     </select>
                   </td>
                   <td>
-                    <select formControlName="item" class="form-control">
+                    <select formControlName="item" class="form-control" (change)="populateUnitPrice($event, i)">
                       <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}
                       </option>
                     </select>
@@ -91,6 +114,9 @@
                     <input type="number" formControlName="quantity" class="form-control" value="1" readonly>
                   </td>
                   <td>
+                    <input type="number" formControlName="unitPrice" class="form-control" readonly>
+                  </td>
+                  <td>
                     <ion-button (click)="deleteRow(i)" color="danger" fill="solid" size="small">
                       <ion-icon name="trash-outline"></ion-icon>
                     </ion-button>
@@ -98,6 +124,15 @@
                 </tr>
               </tbody>
               <tfoot>
+                <tr>
+                  <td colspan="4"></td>
+                  <td class="unit-price-column">
+                    <strong>Total:</strong>
+                  </td>
+                  <td class="total-column">
+                    <strong>{{ total | currency:'INR' }}</strong>
+                  </td>
+                </tr>
                 <tr>
                   <td colspan="7">
                     <ion-button (click)="addRow()" color="success" fill="solid" size="small">
