--- a/src/app/component/replacementform/replacementform.component.html
+++ b/src/app/component/replacementform/replacementform.component.html
@@ -44,13 +44,105 @@
                 placeholder="Utilized Budget" />
             </div>
           </div>
-
-          <!-- Start of Additional Attachments -->
-          <div class="form-group col-md-6">
-            <label for="attachments">Attachments</label>
-            <input type="file" class="form-control" formControlName="Files" name="Files" #fileUpload (change)="FileUploadChange($event)"/>
+          <!-- Add Attachments -->
+          <div class="form-group col-md-12 attachments">
+            <label for="additionalAttachments">Attachments</label>
+            <div formArrayName="additionalAttachments">
+              <div *ngFor="let attachment of additionalAttachments.controls; let i = index" [formGroupName]="i">
+                <div class="row align-items-center">
+                  <div class="col-md-6">
+                    <input type="file" class="form-control" formControlName="attachment"
+                      (change)="handleFileChange($event, i)"
+                      [ngClass]="{'invalid-file': formSubmitted && attachment.invalid && !attachment.value}" />
+                  </div>
+                  <div class="col-md-3 delete">
+                    <button class="btn btn-outline-secondary" type="button" id="button-addon1"
+                      (click)="removeAttachmentField(i)">
+                      <ion-icon name="trash-outline"></ion-icon>
+                    </button>
+                  </div>
+                  <!-- <div class="col-md-3 filename">
+                    <button>
+                      <ion-icon name="document-outline"></ion-icon>
+                      {{attachment.value?.name}}
+                    </button>
+                  </div> -->
+                </div>
+              </div>
+            </div>
+            <div class="input-group">
+              <ion-button (click)="addAttachmentField()" color="medium" fill="solid" size="small"><ion-icon
+                  name="cloud-upload-outline"></ion-icon></ion-button>
+            </div>
           </div>
-          <!-- End of Additional Attachments -->
+          <!-- End Attachments -->
+          <div class="inline-table">
+            <table class="table table-bordered">
+              <thead class="thead-dark">
+                <tr>
+                  <th>Category</th>
+                  <th>Item</th>
+                  <th>Cost Center</th>
+                  <th>Quantity</th>
+                  <th>Unit Price</th>
+                  <th>Action</th>
+                </tr>
+              </thead>
+              <tbody formArrayName="rows">
+                <tr *ngFor="let row of rows.controls; let i = index" [formGroupName]="i"
+                  [ngClass]="{'invalid': formSubmitted && row.invalid}">
+                  <td>
+                    <select formControlName="category" class="form-control"
+                      [ngClass]="{'invalid-inline': formSubmitted && row.get('category')?.invalid}">
+                      <option *ngFor="let option of categoryDropdown" [value]="option.ItemCategory">
+                        {{option.ItemCategory}}</option>
+                    </select>
+                  </td>
+                  <td>
+                    <select formControlName="item" class="form-control" (change)="populateUnitPrice($event, i)">
+                      <option *ngFor="let option of itemDropdown" [value]="option.ItemName">{{ option.ItemName }}
+                      </option>
+                    </select>
+                  </td>
+                  <td>
+                    <select formControlName="costCenter" class="form-control">
+                      <option *ngFor="let option of costCenterdropdown" [value]="option.id">{{ option.CostCenter }}
+                      </option>
+                    </select>
+                  </td>
+                  <td>
+                    <input type="number" formControlName="quantity" class="form-control" value="1" readonly>
+                  </td>
+                  <td>
+                    <input type="number" formControlName="unitPrice" class="form-control" readonly>
+                  </td>
+                  <td>
+                    <ion-button (click)="deleteRow(i)" color="danger" fill="solid" size="small">
+                      <ion-icon name="trash-outline"></ion-icon>
+                    </ion-button>
+                  </td>
+                </tr>
+              </tbody>
+              <tfoot>
+                <tr>
+                  <td colspan="4"></td>
+                  <td class="unit-price-column">
+                    <strong>Total:</strong>
+                  </td>
+                  <td class="total-column">
+                    <strong>{{ total | currency:'INR' }}</strong>
+                  </td>
+                </tr>
+                <tr>
+                  <td colspan="7">
+                    <ion-button (click)="addRow()" color="success" fill="solid" size="small">
+                      <ion-icon name="add-circle-outline"></ion-icon>
+                    </ion-button>
+                  </td>
+                </tr>
+              </tfoot>
+            </table>
+          </div>
         </div>
         <button class="btn btn-info" type="submit">Submit</button>
       </div>
