--- a/src/app/pages/procurementview/procurementview.page.scss
+++ b/src/app/pages/procurementview/procurementview.page.scss
@@ -1,24 +1,19 @@
-table {
+.card {
+  min-height: 80vh;
+}
+
+
+.table {
   width: 100%;
   border-collapse: collapse;
-  margin: 0;
-  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1);
-
 }
 
-table tr {
-  border-bottom: 1px solid #ddd;
-  padding: .45em;
-
-
-}
-
-table th {
+.table th {
   text-align: center;
   padding: .625em;
   font-size: .85em;
   letter-spacing: .1em;
-  text-transform: uppercase;
+  text-transform: capitalize;
   background-color: #428bca !important;
   color: #000;
 }
@@ -27,18 +22,34 @@ tbody tr:nth-child(even) {
   background-color: #f5f5f5;
 }
 
-table th,
-table td {
-  padding: .625em;
-  text-align: center;
+.table th,
+.table td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+
+}
+
+.table th {
+  font-weight: bold;
+}
+
+.table-responsive {
+  overflow-x: auto;
+}
+
+.pagination-controls {
+  display: flex;
+  align-items: center;
+  // justify-content: space-between;
+  justify-content: flex-end;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-top: 120px;
 }
 
 
 
-
-
-
-// @media screen and (max-width: 800px) {
 @media (max-width:768px) {
   table {
     border: 2px solid #ccc;
@@ -48,16 +59,12 @@ table td {
     display: none;
   }
 
-  table th,
-  table td {
-    padding: .5em;
-  }
 
   tbody tr:nth-child(even) {
-    background-color: rgba(0, 0, 0, 0.075);
+    background-color: #c9ebfd;
   }
 
-  table td {
+  table tr td {
     text-align: right;
     display: block;
     font-size: 1em;
@@ -73,32 +80,4 @@ table td {
   table td:last-child {
     border-bottom: 0;
   }
-}
-
-// Modal Css
-.modal-table {
-  ion-row {
-    ion-col {
-      padding: 10px;
-      border-bottom: 1px solid #e0e0e0;
-      display: flex;
-      align-items: center;
-
-      &:first-child {
-        background-color: #f5f5f5;
-        font-weight: bold;
-      }
-
-      h2,
-      p {
-        margin: 0;
-      }
-    }
-  }
-
-  ion-card-header {
-    background-color: #83b4c8;
-    font-weight: bold;
-  }
-
 }
