--- a/src/app/component/newhireform/newhireform.component.html
+++ b/src/app/component/newhireform/newhireform.component.html
@@ -61,12 +61,12 @@
                       <ion-icon name="trash-outline"></ion-icon>
                     </button>
                   </div>
-                  <!-- <div class="col-md-3 filename">
+                  <div class="col-md-3 filename">
                     <button>
                       <ion-icon name="document-outline"></ion-icon>
                       {{attachment.value?.name}}
                     </button>
-                  </div> -->
+                  </div>
                 </div>
               </div>
             </div>
