--- a/src/app/pages/procurementdetails/procurementdetails.page.html
+++ b/src/app/pages/procurementdetails/procurementdetails.page.html
@@ -15,7 +15,10 @@
     <ng-container *ngIf="procurementDataById">
       <ion-card>
         <ion-card-header>
-          <ion-card-title class="ion-align-self-center">Procurement Details</ion-card-title>
+          <ion-row>
+            <ion-button fill="clear" color="light">Back</ion-button>
+            <ion-title class="text-center">IT Procurement</ion-title>
+          </ion-row>
         </ion-card-header>
         <ion-card-content>
           <ion-grid class="modern-table">
