--- a/src/app/pages/procurementview/procurementview.page.scss
+++ b/src/app/pages/procurementview/procurementview.page.scss
@@ -81,3 +81,64 @@ tbody tr:nth-child(even) {
     border-bottom: 0;
   }
 }
+
+
+//new
+.pagination-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.pagination-buttons {
+  display: flex;
+  align-items: center;
+}
+
+.pagination-button {
+  margin-right: 5px;
+}
+
+.jump-page {
+  display: flex;
+  align-items: center;
+  margin: 0 10px;
+}
+
+.jump-page input[type="number"] {
+  width: 50px;
+  padding: 5px;
+  text-align: center;
+}
+
+.jump-button {
+  margin-left: 5px;
+}
+
+.pagination-info {
+  margin-left: 10px;
+  font-size: 14px;
+  color: #0d15ec;
+}
+
+.sort-symbol {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  vertical-align: middle;
+  border-style: solid;
+  border-width: 4px 4px 0 4px;
+  border-color: #f60d0d transparent transparent transparent;
+  margin-left: 5px;
+  opacity: 0.4;
+}
+
+.sort-symbol.asc {
+  transform: rotate(180deg);
+  opacity: 1;
+}
+
+.sort-symbol.desc {
+  opacity: 1;
+}
