--- a/src/app/component/newhireform/newhireform.component.html
+++ b/src/app/component/newhireform/newhireform.component.html
@@ -53,7 +53,7 @@
                   <div class="col-md-6">
                     <input type="file" class="form-control" formControlName="attachment"
                       (change)="handleFileChange($event, i)"
-                      [ngClass]="{'invalid-file': formSubmitted && attachment.invalid && !attachment.value}" />
+                      [ngClass]="{'invalid-file': formSubmitted && attachment.invalid && !attachment.value}" multiple/>
                   </div>
                   <div class="col-md-3 delete">
                     <button class="btn btn-outline-secondary" type="button" id="button-addon1"
