--- a/src/app/component/stockmanagementform/stockmanagementform.component.scss
+++ b/src/app/component/stockmanagementform/stockmanagementform.component.scss
@@ -1,14 +1,15 @@
-.additional-attachments .row{
-    margin-bottom: 10px;
-    margin-top: 10px;
-    border: 1px solid #ccc;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #f5f5f5;
-    box-shadow: 0 0 5px #ccc;
-    position: relative;
+.inline-table table thead {
+    background: #428bca !important;
+    color: azure !important;
 }
 
+.inline-table table thead th {
+    border: 1px solid #ddd;
+    padding: 8px;
+    font-size: 1.2rem;
+    text-align: center;
+    white-space: nowrap;
+}
 
 .invalid input.form-control {
     border-color: red;
@@ -27,19 +28,30 @@
 }
 
 
-.inline-table table thead {
-    background: #428bca !important;
-    color: azure !important;
+input[type=file] {
+    display: inline-block;
+    margin-bottom: 12px;
 }
 
-.inline-table table thead th {
-    border: 1px solid #ddd;
-    padding: 8px;
-    font-size: 1.2rem;
+.invalid-file {
+    border-color: red;
+}
+
+.attachments .filename {
+    color: #428bca;
+}
+
+.unit-price-column {
+    text-align: right;
+}
+
+.total-column {
+    font-weight: bold;
+}
+
+.add-row-column {
     text-align: center;
-    white-space: nowrap;
 }
-
 
 label.required>span {
     color: red;
@@ -47,8 +59,13 @@ label.required>span {
 
 
 tbody tr:nth-child(odd) {
-    background-color: #ebebeb;
+    // background-color: #ebebeb;
+    background-color: #d5de4c14;
 }
+
+
+
+
 
 // for mobile view only
 @media (max-width: 768px) {
@@ -83,25 +100,4 @@ tbody tr:nth-child(odd) {
     .inline-table table thead th {
         white-space: nowrap;
     }
-}
-
-
-form {
-    margin-bottom: 0;
-    background: #428bca;
-}
-
-
-
-
-input[type=file] {
-    display: block;
-    margin-bottom: 12px;
-}
-
-.additional-attachments .name {
-    font-size: 1.2rem;
-    font-weight: 600;
-    color: #428bca;
-    background: greenyellow;
 }
