--- a/src/app/pages/procurementview/procurementview.page.html
+++ b/src/app/pages/procurementview/procurementview.page.html
@@ -20,11 +20,26 @@
         <table class="table">
           <thead class="thead-light">
             <tr>
-              <th scope="col">SI No</th>
-              <th scope="col">Request No</th>
-              <th scope="col">Request Type</th>
-              <th scope="col">Name</th>
-              <th scope="col">Status</th>
+              <th scope="col" (click)="sortColumn = 'SI No'; toggleSortDirection()">SI No
+                <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'SI No' && sortDirection === 'asc'"></ion-icon>
+                <ion-icon name="arrow-down-outline" *ngIf="sortColumn === 'SI No' && sortDirection === 'desc'"></ion-icon>
+              </th>
+              <th scope="col" (click)="sortColumn = 'Request No'; toggleSortDirection()">Request No
+                <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'Request No' && sortDirection === 'asc'"></ion-icon>
+                <ion-icon name="arrow-down-outline" *ngIf="sortColumn === 'Request No' && sortDirection === 'desc'"></ion-icon>
+              </th>
+              <th scope="col" (click)="sortColumn = 'RequestType'; toggleSortDirection()">Request Type
+                <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'RequestType' && sortDirection === 'asc'"></ion-icon>
+                <ion-icon name="arrow-down-outline" *ngIf="sortColumn === 'RequestType' && sortDirection === 'desc'"></ion-icon>
+              </th>
+              <th scope="col" (click)="sortColumn = 'Name'; toggleSortDirection()">Name
+                <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'Name' && sortDirection === 'asc'"></ion-icon>
+                <ion-icon name="arrow-down-outline" *ngIf="sortColumn === 'Name' && sortDirection === 'desc'"></ion-icon>
+              </th>
+              <th scope="col" (click)="sortColumn = 'Status'; toggleSortDirection()">Status
+                <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'Status' && sortDirection === 'asc'"></ion-icon>
+                <ion-icon name="arrow-down-outline" *ngIf="sortColumn === 'Status' && sortDirection === 'desc'"></ion-icon>
+              </th>
               <th scope="col">Action</th>
             </tr>
           </thead>
@@ -46,26 +61,6 @@
         </table>
       </div>
     </ion-card-content>
-    <!-- <div class="pagination-controls">
-      <ion-button (click)="goToPreviousPage()" [disabled]="currentPage === 1" class="pagination-button" fill="clear">
-        <ion-icon name="arrow-back-circle"></ion-icon>
-      </ion-button>
-    
-      <div class="pagination-info">
-        Page {{ currentPage }} of {{ totalPages }}
-      </div>
-    
-      <ion-button (click)="goToNextPage()" [disabled]="currentPage === totalPages" class="pagination-button" fill="clear">
-        <ion-icon name="arrow-forward-circle"></ion-icon>
-      </ion-button>
-    
-      <div class="jump-page">
-        <input type="number" min="1" max="{{ totalPages }}" [(ngModel)]="jumpPageNumber">
-        <ion-button (click)="jumpToPage()" class="jump-button" fill="clear">Go</ion-button>
-      </div>
-    </div> -->
-
-
     <div class="pagination-controls">
       <div class="pagination-buttons">
         <ion-button (click)="goToPreviousPage()" [disabled]="currentPage === 1" class="pagination-button" fill="clear">
