attachment modal work for replacment

--- a/src/app/component/newhireform/newhireform.component.html
+++ b/src/app/component/newhireform/newhireform.component.html
@@ -46,7 +46,7 @@
           </div>
 
           <div class="form-group">
-            <ion-button id="open-modal" size="small" (click)="openModal()">Open</ion-button>
+            <ion-button id="open-modal" size="small" (click)="openModal()"><ion-icon name="cloud-upload-outline"></ion-icon></ion-button>
           </div>
 
           <div class="inline-table">
