added user profile in menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,20 @@
 <ion-app>
   <ion-menu menuId="main-menu" content-id="main">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
-
     <ion-content>
-      <ion-list>
+      <div class="menu-header-bg">
+      </div>
+
+      <div class="header-content">
+        <img src="../assets/profile/hacker.png" alt="profile">
+        <ion-label>
+          <h2>Welcome, {{currentUser?.name}}</h2>
+          <p>{{userTypes}}</p>
+        </ion-label>
+      </div>
+
+      <ion-list class="menu-items" lines="none">
         <ion-menu-toggle>
-          <ion-item routerLink="/home">
+          <ion-item class="active" routerLink="/home">
             <ion-icon slot="start" name="home-outline"></ion-icon>
             <ion-label>Home</ion-label>
           </ion-item>
@@ -39,7 +44,6 @@
                 <ion-icon slot="start" name="navigate-circle-outline"></ion-icon>
                 <ion-label>Approval</ion-label>
               </ion-item>
-
             </ion-list>
           </ion-menu-toggle>
         </ion-toolbar>
@@ -64,19 +68,18 @@
             <ion-label>Help</ion-label>
           </ion-item>
         </ion-menu-toggle>
+
+        <ion-menu-toggle>
+          <ion-item (click)="logout()">
+            <ion-icon name="log-out-outline" slot="start"></ion-icon>
+            <ion-label>Logout</ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+
       </ion-list>
     </ion-content>
-
-    <ion-footer class="footer">
-      <ion-toolbar>
-        <ion-item (click)="logout()">
-          <ion-icon name="log-out" slot="start" color="danger"></ion-icon>
-          <ion-label>Logout</ion-label>
-        </ion-item>
-      </ion-toolbar>
-    </ion-footer>
-
   </ion-menu>
+
   <ion-router-outlet id="main"> </ion-router-outlet>
   <lib-ng-toast></lib-ng-toast>
 </ion-app>
