--- a/src/app/component/newhireform/newhireform.component.html
+++ b/src/app/component/newhireform/newhireform.component.html
@@ -47,6 +47,9 @@
 
           <div class="form-group">
             <ion-button id="open-modal" size="small" (click)="openModal()"><ion-icon name="cloud-upload-outline"></ion-icon></ion-button>
+            <span>
+              file name: {{ uploadedFilesCount }}
+            </span>
           </div>
 
           <div class="inline-table">
