--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,11 +9,56 @@
 }
 
 
-.footer{
-  ion-toolbar{
-    background-color: #0000f0;
+
+.menu-header-bg{
+  height: 180px;
+  width: 350px;
+  background: #7590d6;
+  background: linear-gradient(90deg , #7590d6 0%, #1559A2 100%);
+  box-shadow: 0px 1px 1px rgba(98,140,255,0.5);
+  transform: rotate(-15deg);
+  border-radius: 10px 10px 10px 50px;
+  margin-left: -18px;
+  margin-top: -50px;
+  margin-bottom: 60px;
+  
+}
+
+.header-content{
+  position: absolute;
+  top : 30px;
+  left: 30px;
+  display: flex;
+  align-items: center;
+
+  img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    border: 2px solid #5e7ccc;
+    margin: auto;
+  }
+
+  h2{
+    font-weight: 300;
+
+  }
+
+}
+
+.menu-items{
+  margin: 0px;
+  ion-icon{
+    margin-right: 20px;
+    color: #86976f;
   }
   ion-item{
-    cursor: pointer;
+    padding-left: 20px;
+    margin-bottom: 10px;
   }
+  .active{
+    color: #0000f0;
+  }
+  
 }
+
