--- a/src/app/modal/attachmentsform/attachmentsform.component.html
+++ b/src/app/modal/attachmentsform/attachmentsform.component.html
@@ -3,20 +3,23 @@
     <ion-buttons slot="start">
       <ion-button color="medium" (click)="cancel()">Cancel</ion-button>
     </ion-buttons>
-    <ion-title>Welcome</ion-title>
+    <ion-title class="text-center h5">Additional Attachments</ion-title>
     <ion-buttons slot="end">
       <ion-button (click)="confirm()" [strong]="true">Confirm</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 <ion-content class="ion-padding">
-  <input type="file" (change)="handleAttachment($event)" multiple>
+  <div class="mb-3">
+    <input class="form-control " type="file" (change)="handleAttachment($event)">
+  </div>
+  
   <ion-list>
     <ion-item *ngFor="let attachment of attachments; let i = index">
       <ion-label>{{ attachment.name }}</ion-label>
-      <ion-button (click)="deleteAttachment(i)" color="danger" slot="end">
-        <ion-icon name="close"></ion-icon>
-      </ion-button>
+      <ion-button (click)="deleteAttachment(i)" color="danger" slot="end"><ion-icon name="close"></ion-icon></ion-button>
     </ion-item>
   </ion-list>
+
 </ion-content>
