--- a/src/app/pages/procurementview/procurementview.page.html
+++ b/src/app/pages/procurementview/procurementview.page.html
@@ -9,37 +9,76 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
 <ion-content fullscreen="true">
   <ion-card class="card">
+
     <ion-card-header>
-      <ion-searchbar [(ngModel)]="statusFilter" (ionChange)="filterItems()"
-        placeholder="Filter By Name & Status"></ion-searchbar>
+      <ion-searchbar [(ngModel)]="statusFilter" (ionChange)="filterItems()" placeholder="Filter By Name & Status"></ion-searchbar>
     </ion-card-header>
+
     <ion-card-content>
       <div class="table-responsive">
         <table class="table">
           <thead class="thead-light">
-            <tr>
-              <th scope="col" (click)="sortColumn = 'SI No'; toggleSortDirection()">SI No
+            <tr class="sorting">
+              <th scope="col" (click)="sortColumn = 'SI No'; toggleSortDirection('SI No')"
+                [ngClass]="{'ascending': sortColumn === 'SI No' && sortDirection === 'asc', 'descending': sortColumn === 'SI No' && sortDirection === 'desc'}">
+                SI No
                 <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'SI No' && sortDirection === 'asc'"></ion-icon>
                 <ion-icon name="arrow-down-outline" *ngIf="sortColumn === 'SI No' && sortDirection === 'desc'"></ion-icon>
               </th>
-              <th scope="col" (click)="sortColumn = 'Request No'; toggleSortDirection()">Request No
-                <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'Request No' && sortDirection === 'asc'"></ion-icon>
-                <ion-icon name="arrow-down-outline" *ngIf="sortColumn === 'Request No' && sortDirection === 'desc'"></ion-icon>
+              <th scope="col" (click)="sortColumn = 'Request No'; toggleSortDirection('Request No')">
+                Request No
+                <ion-icon name="arrow-up-outline"
+                  *ngIf="sortColumn === 'Request No' && sortDirection === 'asc'"></ion-icon>
+                <ion-icon name="arrow-down-outline"
+                  *ngIf="sortColumn === 'Request No' && sortDirection === 'desc'"></ion-icon>
+              </th>
+
+              <th scope="col" (click)="sortColumn = 'RequestType'; toggleSortDirection('RequestType')">
+                Request Type
+                <ion-icon name="arrow-up-outline"
+                  *ngIf="sortColumn === 'RequestType' && sortDirection === 'asc'"></ion-icon>
+                <ion-icon name="arrow-down-outline"
+                  *ngIf="sortColumn === 'RequestType' && sortDirection === 'desc'"></ion-icon>
+              </th>
+
+              <th scope="col" (click)="sortColumn = 'Name'; toggleSortDirection('Name')">Name
+                <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'Name' && sortDirection === 'asc'"></ion-icon>
+                <ion-icon name="arrow-down-outline"
+                  *ngIf="sortColumn === 'Name' && sortDirection === 'desc'"></ion-icon>
+
+              </th>
+
+              <th scope="col" (click)="sortColumn = 'Status'; toggleSortDirection('Status')">Status
+                <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'Status' && sortDirection === 'asc'"></ion-icon>
+                <ion-icon name="arrow-down-outline"
+                  *ngIf="sortColumn === 'Status' && sortDirection === 'desc'"></ion-icon>
+              </th>
+
+              <!-- <th scope="col" (click)="sortColumn = 'Request No'; toggleSortDirection()">Request No
+                <ion-icon name="arrow-up-outline"
+                  *ngIf="sortColumn === 'Request No' && sortDirection === 'asc'"></ion-icon>
+                <ion-icon name="arrow-down-outline"
+                  *ngIf="sortColumn === 'Request No' && sortDirection === 'desc'"></ion-icon>
               </th>
               <th scope="col" (click)="sortColumn = 'RequestType'; toggleSortDirection()">Request Type
-                <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'RequestType' && sortDirection === 'asc'"></ion-icon>
-                <ion-icon name="arrow-down-outline" *ngIf="sortColumn === 'RequestType' && sortDirection === 'desc'"></ion-icon>
+                <ion-icon name="arrow-up-outline"
+                  *ngIf="sortColumn === 'RequestType' && sortDirection === 'asc'"></ion-icon>
+                <ion-icon name="arrow-down-outline"
+                  *ngIf="sortColumn === 'RequestType' && sortDirection === 'desc'"></ion-icon>
               </th>
               <th scope="col" (click)="sortColumn = 'Name'; toggleSortDirection()">Name
                 <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'Name' && sortDirection === 'asc'"></ion-icon>
-                <ion-icon name="arrow-down-outline" *ngIf="sortColumn === 'Name' && sortDirection === 'desc'"></ion-icon>
+                <ion-icon name="arrow-down-outline"
+                  *ngIf="sortColumn === 'Name' && sortDirection === 'desc'"></ion-icon>
               </th>
               <th scope="col" (click)="sortColumn = 'Status'; toggleSortDirection()">Status
                 <ion-icon name="arrow-up-outline" *ngIf="sortColumn === 'Status' && sortDirection === 'asc'"></ion-icon>
-                <ion-icon name="arrow-down-outline" *ngIf="sortColumn === 'Status' && sortDirection === 'desc'"></ion-icon>
-              </th>
+                <ion-icon name="arrow-down-outline"
+                  *ngIf="sortColumn === 'Status' && sortDirection === 'desc'"></ion-icon>
+              </th> -->
               <th scope="col">Action</th>
             </tr>
           </thead>
@@ -61,25 +100,22 @@
         </table>
       </div>
     </ion-card-content>
+
     <div class="pagination-controls">
+
       <div class="pagination-buttons">
         <ion-button (click)="goToPreviousPage()" [disabled]="currentPage === 1" class="pagination-button" fill="clear">
           <ion-icon name="arrow-back-circle"></ion-icon>
         </ion-button>
 
-        <div class="jump-page">
-          <input type="number" min="1" max="{{ totalPages }}" [(ngModel)]="jumpPageNumber">
-          <ion-button (click)="jumpToPage()" class="jump-button" fill="clear">Go</ion-button>
+        <div class="pagination-info">
+          Page {{ currentPage }} of {{ totalPages }}
         </div>
 
         <ion-button (click)="goToNextPage()" [disabled]="currentPage === totalPages" class="pagination-button"
           fill="clear">
           <ion-icon name="arrow-forward-circle"></ion-icon>
         </ion-button>
-      </div>
-
-      <div class="pagination-info">
-        Page {{ currentPage }} of {{ totalPages }}
       </div>
     </div>
 
