--- a/src/app/pages/procurementdetails/procurementdetails.page.html
+++ b/src/app/pages/procurementdetails/procurementdetails.page.html
@@ -16,7 +16,7 @@
       <ion-card>
         <ion-card-header>
           <ion-row>
-            <ion-button fill="clear" color="light">Back</ion-button>
+            <ion-button fill="clear" color="light" [(ngModel)]="back">Back</ion-button>
             <ion-title class="text-center">IT Procurement</ion-title>
           </ion-row>
         </ion-card-header>
