--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,112 +1,30 @@
-<!-- <ion-app>
-  <ion-menu menuId="main-menu" content-id="main">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
-
-    <ion-content>
-      <ion-list>
-        <ion-menu-toggle>
-          <ion-item routerLink="/home">
-            <ion-icon name="home" slot="start"></ion-icon>
-            <ion-label>Home</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-
-        <ion-toolbar>
-          <ion-item (click)="toggleUserDropdown()" [class.clicked]="userDropdownClicked" button detail="true"
-            detail-icon="caret-forward-outline">
-            <ion-icon name="cart-outline" slot="start"></ion-icon>
-            <ion-label>Procurement</ion-label>
-          </ion-item>
-
-          <ion-menu-toggle>
-            <ion-list *ngIf="userDropdownClicked" class="user-dropdown">
-              <ion-item [routerLink]="'/procurement'">
-                <ion-icon slot="start" name="documents-outline"></ion-icon>
-                <ion-label>Request</ion-label>
-              </ion-item>
-
-
-              <ion-item [routerLink]="'/procurementview'">
-                <ion-icon slot="start" name="file-tray-sharp"></ion-icon>
-                <ion-label>List</ion-label>
-              </ion-item>
-
-
-              <ion-item *ngIf="isApprover === true" [routerLink]="'/approvallist'">
-                <ion-icon slot="start" name="navigate-circle-outline"></ion-icon>
-                <ion-label>Approval</ion-label>
-              </ion-item>
-
-
-            </ion-list>
-          </ion-menu-toggle>
-        </ion-toolbar>
-
-        <ion-menu-toggle>
-          <ion-item routerLink="">
-            <ion-icon name="stats-chart-outline" slot="start"></ion-icon>
-            <ion-label>Analytics</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-
-        <ion-menu-toggle>
-          <ion-item routerLink="">
-            <ion-icon name="document-text-outline" slot="start"></ion-icon>
-            <ion-label>Reports</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-
-        <ion-menu-toggle>
-          <ion-item routerLink="">
-            <ion-icon name="help-circle-outline" slot="start"></ion-icon>
-            <ion-label>Help</ion-label>
-          </ion-item>
-        </ion-menu-toggle>
-      </ion-list>
-    </ion-content>
-
-    <ion-footer class="footer">
-      <ion-toolbar>
-        <ion-item (click)="logout()">
-          <ion-icon name="log-out" slot="start" color="danger"></ion-icon>
-          <ion-label>Logout</ion-label>
-        </ion-item>
-      </ion-toolbar>
-    </ion-footer>
-
-  </ion-menu>
-  <ion-router-outlet id="main"> </ion-router-outlet>
-  <lib-ng-toast></lib-ng-toast>
-</ion-app> -->
-
-
-
 <ion-app>
   <ion-menu menuId="main-menu" content-id="main">
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>Menu</ion-title>
-      </ion-toolbar>
-    </ion-header>
+
+    <div class="menu-header-bg">
+    </div>
+    
+    <div class="header-content">
+      <img src="../assets/profile/hacker.png" alt="profile">
+      <ion-label>
+        <h2>Welcome, {{currentUser?.user_name}}</h2>
+      </ion-label>
+    </div>
 
     <ion-content>
-      <ion-list>
+      <ion-list class="menu-items" lines="none">
         <ion-menu-toggle *ngFor="let module of module_ids">
           <ion-item [routerLink]="module.m_link" *ngIf="!module.root_module || module.root_module.length === 0">
             <ion-icon [name]="module.m_icon_name" slot="start"></ion-icon>
             <ion-label>{{ module.module_name }}</ion-label>
           </ion-item>
-
+    
           <ion-item *ngIf="module.root_module && module.root_module.length > 0" button detail="true"
             detail-icon="caret-forward-outline" (click)="toggleSubMenu(module)">
             <ion-icon [name]="module.m_icon_name" slot="start"></ion-icon>
             <ion-label>{{ module.module_name }}</ion-label>
           </ion-item>
-
+    
           <ion-list *ngIf="module.showSubMenu">
             <ion-item [routerLink]="subModule.m_link" *ngFor="let subModule of module.root_module">
               <ion-icon [name]="subModule.m_icon_name" slot="start"></ion-icon>
@@ -116,18 +34,17 @@
         </ion-menu-toggle>
       </ion-list>
     </ion-content>
-
+    
     <ion-footer class="footer">
       <ion-toolbar>
-        <ion-item (click)="logout()">
+        <ion-item (click)="logout()" lines="none">
           <ion-icon name="log-out" slot="start" color="danger"></ion-icon>
           <ion-label>Logout</ion-label>
         </ion-item>
       </ion-toolbar>
     </ion-footer>
-
   </ion-menu>
-  <ion-router-outlet id="main"></ion-router-outlet>
+
+  <ion-router-outlet id="main"> </ion-router-outlet>
   <lib-ng-toast></lib-ng-toast>
 </ion-app>
-
