--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,8 @@
   <ion-card class="main-card">
     <ion-card-header class="ion-text-center">
       <ion-card-title class="Cardtitle">Welcome To IT Procurement Portal</ion-card-title>
-      <ion-card-subtitle class="Cardsubtitle">ITProcurement is a web application that allows you to manage your IT procurement process.</ion-card-subtitle>
+      <ion-card-subtitle class="Cardsubtitle">ITProcurement is a web application that allows you to manage your IT
+        procurement process.</ion-card-subtitle>
     </ion-card-header>
 
     <ion-card-content>
@@ -26,13 +27,13 @@
               <ion-card-subtitle>To Create Procurement Request of Items</ion-card-subtitle>
             </ion-card-header>
           </ion-card>
-          <ion-card class="triangle-card card2">
+          <ion-card class="triangle-card card2" *ngIf="getcurrentUser?.is_dsin===true">
             <ion-card-header>
               <ion-card-title>DS-IN</ion-card-title>
               <ion-card-subtitle>Network/Data Center License Related Procurement</ion-card-subtitle>
             </ion-card-header>
           </ion-card>
-          <ion-card class="triangle-card card3" routerLink="/">
+          <ion-card class="triangle-card card3" routerLink="/home">
             <ion-card-header>
               <ion-card-title>Customer Project IT Requirements</ion-card-title>
               <ion-card-subtitle>Customer Requirement Gathering</ion-card-subtitle>
